fixed font and z-index with correct links on home page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,9 @@
     root: ":root";
     logs: true;
 }
+
+
+/* Smooth scrolling*/
+html {
+  scroll-behavior: smooth;
+}
